crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@332.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_mul VALUES (7,7,'670653780922685519356619170643530564');"
---
InsertStmt@0..76
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_mul"
  Whitespace@23..24 " "
  SelectStmt@24..74
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..74
      AConst@32..33
        Iconst@32..33 "7"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "7"
      Ascii44@35..36 ","
      AConst@36..74
        Sconst@36..74 "'67065378092268551935 ..."
  Ascii41@74..75 ")"
  Ascii59@75..76 ";"

