crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@339.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_sub VALUES (7,9,'-818934540126709222.34685027005508022756223282084742813020271603840941647350440860843570182437301045468670059279379903480024743452620396345637401505220786389930600883087012615993343976556472498552535317826554614696684732913955544753638726438705858481670766245958647367500212800073774509075408148134050353551558174813940258910304990570172170811882520915334358633');"
---
InsertStmt@0..401
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_sub"
  Whitespace@23..24 " "
  SelectStmt@24..399
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..399
      AConst@32..33
        Iconst@32..33 "7"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "9"
      Ascii44@35..36 ","
      AConst@36..399
        Sconst@36..399 "'-818934540126709222. ..."
  Ascii41@399..400 ")"
  Ascii59@400..401 ";"

